# caretaleai

./: ARCHITECTURE.md  Makefile  README.md  TASK_4.2_SUMMARY.md  TESTING.md  design.md  jest.config.js  package.json  pyproject.toml  requirements.md  requirements.txt  setup.py  tsconfig.json
data/knowledge-base/: README.md
docs/: task-1.2-summary.md  task-1.3-summary.md  task-2.4-summary.md  task-2.5-summary.md  task-3.1-summary.md  task-3.3-summary.md  task-4.1-summary.md  task-4.3-summary.md  testing-infrastructure.md  testing-quick-reference.md
examples/: knowledge-base-demo.ts  knowledge_base_demo.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_020c162d6482b364___init___py.html  z_023d3105ef0f50d4___init___py.html  z_16fa46a7e490f1a7___init___py.html  z_16fa46a7e490f1a7_ai_orchestrator_py.html  z_5004cf98d339b805___init___py.html  z_50586e8d503efe1f___init___py.html  z_7aaaff0cc8489cdf___init___py.html  z_7aaaff0cc8489cdf_citation_generator_py.html  z_7aaaff0cc8489cdf_document_retriever_py.html  z_7aaaff0cc8489cdf_knowledge_base_manager_py.html  z_7aaaff0cc8489cdf_rag_system_py.html  z_7aaaff0cc8489cdf_reranker_py.html  z_89ba810de8ab0999___init___py.html  z_95cfa78f0d4eae2d___init___py.html  z_95cfa78f0d4eae2d_care_context_py.html  z_95cfa78f0d4eae2d_interaction_record_py.html  z_95cfa78f0d4eae2d_knowledge_document_py.html  z_95cfa78f0d4eae2d_patient_profile_py.html  z_ad959ce5e98496eb___init___py.html  z_ba41f4ad9728819a___init___py.html  z_cf264857eba1295b___init___py.html  z_eba9334842812e8d___init___py.html  z_eba9334842812e8d_speech_to_text_py.html  z_ed4986c47867d088___init___py.html  z_ed4986c47867d088_accessibility_py.html  z_ed4986c47867d088_multimodal_interface_py.html
python/caretale_ai.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+81 files in other folders)
