[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caretale-ai"
version = "0.1.0"
description = "Post-discharge multimodal care companion system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["healthcare", "ai", "multimodal", "care-companion"]
authors = [
    {name = "CARETALE AI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "hypothesis>=6.92.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=python/src --cov-report=html --cov-report=term"

# Hypothesis configuration for property-based testing
[tool.hypothesis]
max_examples = 100  # Minimum 100 iterations as per design requirements
deadline = 30000    # 30 second timeout for property tests
verbosity = "normal"
print_blob = true   # Print failing examples for debugging

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
